--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,8 @@ table {
 .App {
   min-width: 960px;
   max-width: 100vw;
-  height: 100vh;
-  min-height: 768px;
+  max-height: 100vh;
+  min-height: 600px;
   overflow: hidden;
   font-family: "Work Sans", sans-serif;
   font-weight: 300;
@@ -129,8 +129,53 @@ header {
   cursor: default;
   left: 7.85%;
   font-size: 36px;
-  right: 58.97%;
   line-height: 45px;
   top: 26.67%;
   bottom: 25.56%;
   color: white; }
+
+.AppGrid {
+  display: grid;
+  grid-template-columns: 22vw 39vw 39vw;
+  grid-template-rows: 25vh 25vh 25vh 1fr;
+  height: calc(100vh - 90px); }
+
+nav {
+  grid-column: 1;
+  grid-row: 1 / 4;
+  font-weight: 400; }
+  nav h2 {
+    font-size: 24px;
+    padding: 1em;
+    color: #006689; }
+  nav ul {
+    list-style-type: none; }
+    nav ul li {
+      display: block;
+      padding: 1.5em 1em 1.5em 2em;
+      width: 75%;
+      border-top: 1px solid #C4C4C4; }
+  nav div {
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+    height: calc(100% - 16vh);
+    box-shadow: 4px 2px 6px 0px rgba(0, 0, 0, 0.25);
+    overflow: scroll; }
+
+.content {
+  grid-column: 2 / 4;
+  grid-row: 1 / 4; }
+
+.sidebar {
+  box-shadow: -4px 2px 6px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 8vh;
+  margin-bottom: 8vh;
+  height: calc(100% - 16vh);
+  overflow: scroll;
+  float: right;
+  width: 22vw; }
+
+footer {
+  grid-column: 1 / 4;
+  grid-row: 4;
+  background-color: #EEEEEE; }
