--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ header {
         position: absolute;
         width: 103px;
         height: 30px;
-        left: 70%;
+        left: calc(100vw - 330px);
         top: 25%;
         font-weight: 300;
         font-size: 16px;
@@ -107,7 +107,7 @@ header {
         position: absolute;
         width: 119px;
         height: 30px;
-        left: 80%;
+        left: calc(100vw - 220px);
         top: 25%;
         font-weight: 300;
         font-size: 16px;
