--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500&display=swap');
 
 $primary: #006689;
+$secondary: #7BF1D4;
 $lightgray: #EEEEEE;
 $mediumgray: #C4C4C4;
 
