--- a/src/App.scss
+++ b/src/App.scss
@@ -157,11 +157,11 @@ header {
 }
 
 /* Navigation, content, sidebar and footer share a CSS grid. */
-  /* The grid is split into 3 columns, 4 rows, adjusted to viewport. Viewport has a min-width of 960px (see .App). */
+/* The grid is split into 3 columns, 4 rows, adjusted to viewport. Viewport has a min-width of 960px (see .App). */
 
 .AppGrid {
   display: grid;
-  grid-template-columns: minmax(250px, 20vw) 1fr minmax(250px, 20vw);
+  grid-template-columns: minmax(300px, 20vw) 1fr minmax(300px, 20vw);
   grid-template-rows: 27vh 27vh 1fr 90px;
   height: calc(100vh - 90px);
 }
@@ -242,6 +242,7 @@ nav {
 
 .content {
   grid-column: 2 / 4;
+  z-index: 1;
   grid-row: 1 / 4;
 }
 
@@ -255,10 +256,11 @@ nav {
   width: 22vw;
 }
 
-/* Footer lives at the bottom, with the free space available after most of the grid is calculated. */
+/* Footer lives at the bottom, with a fixed 90px height. */
 
 footer {
   grid-column: 1 / 4;
+  z-index: 2;
   grid-row: 4;
   background-color: $lightgray;
 }
