--- a/src/App.css
+++ b/src/App.css
@@ -204,6 +204,13 @@ nav {
   grid-column: 2 / 4;
   z-index: 1;
   grid-row: 1 / 4; }
+  .content .contentRoute {
+    display: inline-block;
+    margin-top: 5vw;
+    height: 100%;
+    overflow-y: scroll;
+    width: calc(100% - 24vw);
+    margin-left: 2vw; }
 
 .sidebar {
   box-shadow: -4px 2px 6px 0px rgba(0, 0, 0, 0.25);
