--- a/src/App.scss
+++ b/src/App.scss
@@ -244,6 +244,14 @@ nav {
   grid-column: 2 / 4;
   z-index: 1;
   grid-row: 1 / 4;
+  .contentRoute {
+    display: inline-block;
+    margin-top: 5vw;
+    height: 100%;
+    overflow-y: scroll;
+    width: calc(100% - 24vw);
+    margin-left: 2vw;
+  }
 }
 
 .sidebar {
