--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,7 @@ nav {
 .content {
   grid-column: 2 / 4;
   z-index: 1;
+  line-height: 2;
   grid-row: 1 / 4; }
   .content .contentRoute {
     display: inline-block;
@@ -211,6 +212,23 @@ nav {
     overflow-y: scroll;
     width: calc(100% - 24vw);
     margin-left: 2vw; }
+    .content .contentRoute h1 {
+      font-size: calc(10px + 2vmin); }
+    .content .contentRoute h3 {
+      font-size: calc(10px + 1vmin); }
+    .content .contentRoute ol {
+      margin-top: 1em; }
+    .content .contentRoute button#getStarted {
+      background-color: #006689;
+      padding: 1em 3em 1em 3em;
+      text-transform: uppercase;
+      border-radius: 3px;
+      margin: 0 auto;
+      color: white;
+      outline: 0;
+      border: 0;
+      display: block;
+      box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.25); }
 
 .sidebar {
   box-shadow: -4px 2px 6px 0px rgba(0, 0, 0, 0.25);
