--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@ nav {
     margin-top: 5vw;
     height: 100%;
     overflow-y: scroll;
-    width: calc(100% - 24vw);
+    width: calc(100% - (300px + 2vw));
     margin-left: 2vw; }
     .content .contentRoute h1 {
       font-size: calc(10px + 2vmin); }
@@ -237,7 +237,11 @@ nav {
   height: calc(100% - 16vh);
   overflow: scroll;
   float: right;
-  width: 22vw; }
+  width: 300px; }
+  .sidebar h2 {
+    font-size: 24px;
+    padding: 0.5em 1em 0.5em 1em;
+    color: #006689; }
 
 /* Footer lives at the bottom, with a fixed 90px height. */
 footer {
