--- a/src/App.scss
+++ b/src/App.scss
@@ -273,7 +273,7 @@ nav {
     margin-top: 5vw;
     height: 100%;
     overflow-y: scroll;
-    width: calc(100% - 24vw);
+    width: calc(100% - (300px + 2vw));
     margin-left: 2vw;
   }
 }
@@ -285,7 +285,12 @@ nav {
   height: calc(100% - 16vh);
   overflow: scroll;
   float: right;
-  width: 22vw;
+  width: 300px;
+  h2 {
+    font-size: 24px;
+    padding: 0.5em 1em 0.5em 1em;
+    color: $primary;
+  }
 }
 
 /* Footer lives at the bottom, with a fixed 90px height. */
