--- a/src/App.css
+++ b/src/App.css
@@ -218,11 +218,14 @@ nav {
       font-size: calc(10px + 1vmin); }
     .content .contentRoute ol {
       margin-top: 1em; }
+    .content .contentRoute a.button {
+      text-decoration: none; }
     .content .contentRoute button#getStarted {
       background-color: #006689;
       padding: 1em 3em 1em 3em;
       text-transform: uppercase;
       border-radius: 3px;
+      cursor: pointer;
       margin: 0 auto;
       color: white;
       outline: 0;
