--- a/src/App.scss
+++ b/src/App.scss
@@ -255,12 +255,16 @@ nav {
     ol {
       margin-top: 1em;
     }
+    a.button {
+      text-decoration: none;
+    }
     button {
       &#getStarted {
         background-color: $primary;
         padding: 1em 3em 1em 3em;
         text-transform: uppercase;
         border-radius: 3px;
+        cursor: pointer;
         margin: 0 auto;
         color: white;
         outline: 0;
