--- a/src/App.css
+++ b/src/App.css
@@ -72,10 +72,13 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
   header svg.home {
     position: absolute;
-    left: 3.75%;
-    right: 93.47%;
     top: 27.78%;
     bottom: 27.78%; }
+  header .homeHeader {
+    position: absolute;
+    width: 100vw;
+    left: 2%;
+    top: 25%; }
   header .sub-nav {
     float: right; }
     header .sub-nav span.user {
@@ -127,7 +130,7 @@ header {
   font-weight: 400;
   position: absolute;
   cursor: default;
-  left: 7.85%;
+  left: 47px;
   font-size: 36px;
   line-height: 45px;
   top: 26.67%;
