--- a/src/App.scss
+++ b/src/App.scss
@@ -303,8 +303,9 @@ nav {
     svg.chevronRight {
       display: inline-block;
       color: $primary;
+      cursor: pointer;
       vertical-align: middle;
-      transition: all 0.5s ease;
+      transition: all 0.25s ease;
       &.active {
         transform: rotate(90deg);
       }
@@ -313,6 +314,7 @@ nav {
       list-style-type: none;
       li {
         span {
+          cursor: pointer;
           display: inline;
           vertical-align: middle;
         }
