--- a/src/App.scss
+++ b/src/App.scss
@@ -224,6 +224,7 @@ nav {
     list-style-type: none;
     li {
       span {
+        cursor: pointer;
         display: inline-block;
         vertical-align: middle;
       }
@@ -233,7 +234,7 @@ nav {
       border-top: 1px solid $mediumgray;
     }
   }
-  div {
+  div.navDiv {
     margin-top: 8vh;
     margin-bottom: 8vh;
     height: calc(100% - 16vh);
