--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,8 @@ nav {
     display: inline-block;
     vertical-align: middle;
     margin-left: -5px;
-    margin-right: 10px; }
+    margin-right: 10px;
+    cursor: pointer; }
     nav img.Money {
       width: 33px;
       height: 19px;
@@ -177,7 +178,8 @@ nav {
   nav svg.chevronRight {
     display: inline-block;
     color: #006689;
-    vertical-align: middle; }
+    vertical-align: middle;
+    margin-right: 5px; }
     nav svg.chevronRight.active {
       transform: rotate(90deg);
       transition: all 0.5s ease; }
