--- a/src/App.css
+++ b/src/App.css
@@ -226,18 +226,53 @@ nav {
       margin-top: 1em; }
     .content .contentRoute a.button {
       text-decoration: none; }
-    .content .contentRoute button#getStarted {
-      background-color: #006689;
-      padding: 1em 3em 1em 3em;
+    .content .contentRoute button {
+      padding: 1em 2em 1em 2em;
       text-transform: uppercase;
       border-radius: 3px;
       cursor: pointer;
-      margin: 0 auto;
+      background-color: #006689;
       color: white;
+      box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.25);
       outline: 0;
       border: 0;
-      display: block;
-      box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.25); }
+      font-size: 0.9em; }
+      .content .contentRoute button#getStarted {
+        margin: 0 auto;
+        display: block; }
+
+.content .loginLeft {
+  width: 25%;
+  padding: 2% 18% 2% 2%;
+  border-right: 1px solid #C4C4C4;
+  float: left; }
+  .content .loginLeft h3.signIn {
+    margin-top: 10vh; }
+  .content .loginLeft input {
+    display: block;
+    outline: 0;
+    border: 0;
+    border-bottom: 1px solid #006689;
+    font-family: "Work Sans";
+    margin-top: 25px;
+    padding-bottom: 5px;
+    width: 100%;
+    font-size: 1.1em; }
+  .content .loginLeft p {
+    margin-bottom: 1em; }
+  .content .loginLeft small {
+    font-size: 0.8em;
+    display: block; }
+  .content .loginLeft button.signIn {
+    margin-top: 1em; }
+
+.content .loginRight {
+  float: left;
+  width: 32%;
+  padding: 2% 10% 2% 3%;
+  min-height: 500px; }
+  .content .loginRight p {
+    margin-bottom: 1em; }
 
 .sidebar {
   box-shadow: -4px 2px 6px 0px rgba(0, 0, 0, 0.25);
