ContentRoute was too big.

--- a/src/App.css
+++ b/src/App.css
@@ -213,8 +213,8 @@ nav {
   grid-row: 1 / 4; }
   .content .contentRoute {
     display: inline-block;
-    margin-top: 5vw;
-    height: 100%;
+    margin-top: 5vh;
+    height: calc(100% - 5vh);
     overflow-y: scroll;
     width: calc(100% - (300px + 2vw));
     margin-left: 2vw; }
