--- a/src/App.scss
+++ b/src/App.scss
@@ -282,8 +282,8 @@ nav {
       }
     }
     display: inline-block;
-    margin-top: 5vw;
-    height: 100%;
+    margin-top: 5vh;
+    height: calc(100% - 5vh);
     overflow-y: scroll;
     width: calc(100% - (300px + 2vw));
     margin-left: 2vw;
