--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,18 @@ table {
 	border-spacing: 0;
 }
 
+* {
+  scrollbar-width: 1px;
+}
+
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-corner {
+  display: none;
+}
+
 /* This is desktop only! */
 .App {
   min-width: 960px;
