--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,400,500&display=swap");
 /* Reset! */
 html, body, div, span, applet, object, iframe,
@@ -63,6 +64,24 @@ table {
   font-family: "Work Sans", sans-serif;
   font-weight: 300;
   background-color: #FFF; }
+  .App input[type=checkbox] {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    vertical-align: middle;
+    box-shadow: none;
+    -webkit-appearance: none;
+    border: 1px solid #006689;
+    border-radius: 3px; }
+    .App input[type=checkbox]:checked:after {
+      content: '✓';
+      font-size: 20px;
+      bottom: 1px;
+      left: 1px;
+      color: #006689;
+      position: absolute;
+      height: 20px;
+      width: 20px; }
 
 .App h1, h2, h3, h4 {
   font-weight: 500; }
