Clicking the label checks the checkbox

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@ table {
   font-family: "Work Sans", sans-serif;
   font-weight: 300;
   background-color: #FFF; }
+  .App label {
+    cursor: pointer; }
   .App input[type=checkbox] {
     width: 20px;
     height: 20px;
