--- a/src/App.scss
+++ b/src/App.scss
@@ -493,7 +493,38 @@ footer {
   grid-column: 1 / 4;
   z-index: 2;
   grid-row: 4;
+  position: relative;
   background-color: $lightgray;
+  button {
+    padding: 1em 2em 1em 2em;
+    text-transform: uppercase;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: $primary;
+    color: white;
+    box-shadow: 2px 4px 6px 0px rgba(0,0,0,0.25);
+    outline: 0;
+    border: 0;
+    font-size: 0.9em;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 1s ease;
+    &.hidden {
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
+    &#previous {
+      position: absolute;
+      top: 20%;
+      left: 20px;
+    }
+    &#next {
+      position: absolute;
+      left: calc(100% - 120px);
+      top: 20%;
+    }
+  }
 }
 
 /* Animation */
