Preparing to add /rent

--- a/src/App.scss
+++ b/src/App.scss
@@ -513,6 +513,7 @@ footer {
       visibility: hidden;
       opacity: 0;
       transition: opacity 1s ease;
+      pointer-events: none;
     }
     &#previous {
       position: absolute;
