--- a/src/App.css
+++ b/src/App.css
@@ -420,7 +420,8 @@ footer {
     footer button.hidden {
       visibility: hidden;
       opacity: 0;
-      transition: opacity 1s ease; }
+      transition: opacity 1s ease;
+      pointer-events: none; }
     footer button#previous {
       position: absolute;
       top: 20%;
