--- a/src/App.css
+++ b/src/App.css
@@ -404,12 +404,11 @@ footer {
   position: relative;
   background-color: #EEEEEE; }
   footer button {
-    padding: 1em 2em 1em 2em;
+    padding: 1em 1.7em 1em 1.5em;
     text-transform: uppercase;
     border-radius: 3px;
     cursor: pointer;
-    background-color: #006689;
-    color: white;
+    color: #006689;
     box-shadow: 2px 4px 6px 0px rgba(0, 0, 0, 0.25);
     outline: 0;
     border: 0;
@@ -423,13 +422,26 @@ footer {
       transition: opacity 1s ease;
       pointer-events: none; }
     footer button#previous {
+      padding: 1em 1em 1em 1.7em;
+      background-color: white;
       position: absolute;
       top: 20%;
       left: 20px; }
+      footer button#previous svg.chevronLeft {
+        position: absolute;
+        left: 1px;
+        top: 11px; }
     footer button#next {
+      background-color: #7BF1D4;
       position: absolute;
       left: calc(100% - 120px);
       top: 20%; }
+      footer button#next svg.chevronRight {
+        position: absolute;
+        right: -2px;
+        top: 11px; }
+    footer button svg.chevronRight {
+      display: inline-block; }
 
 /* Animation */
 .switch-wrapper {
