--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,28 @@ table {
       position: absolute;
       height: 20px;
       width: 20px; }
+  .App input[type=radio] {
+    display: inline-block;
+    -webkit-appearance: none;
+    height: 14px;
+    width: 14px;
+    vertical-align: text-bottom;
+    border: 2px solid #006689;
+    border-radius: 30px;
+    position: relative; }
+    .App input[type=radio]:checked {
+      border: 1px solid #006689; }
+    .App input[type=radio]:checked:after {
+      content: '';
+      display: block;
+      height: 2px;
+      top: 2px;
+      left: 2px;
+      width: 2px;
+      border: 3px solid transparent;
+      border-radius: 5px;
+      position: absolute;
+      background-color: #006689; }
 
 .App h1, h2, h3, h4 {
   font-weight: 500; }
