--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,20 @@ table {
       border-radius: 5px;
       position: absolute;
       background-color: #006689; }
+  .App span.date {
+    border: 1px solid #006689;
+    border-radius: 3px;
+    width: 147px;
+    height: 32px;
+    padding: 0;
+    padding-top: 4px;
+    padding-left: 8px;
+    font-size: 16px; }
+    .App span.date:empty::before {
+      content: 'mm/dd/yyyy';
+      font-size: 16px;
+      color: #C4C4C4;
+      display: inline-block; }
 
 .App h1, h2, h3, h4 {
   font-weight: 500; }
@@ -383,6 +397,13 @@ nav {
   border: 0;
   font-size: 0.9em;
   margin-bottom: 1em; }
+
+.content #rent div.picker {
+  position: relative; }
+
+.content #rent img[alt=calendar] {
+  position: absolute;
+  left: 30px; }
 
 .sidebar {
   box-shadow: -4px 2px 6px 0px rgba(0, 0, 0, 0.25);
